force-app/main/default/objects/ApplicationErrorLog__c/ApplicationErrorLog__c.object-meta.xml
<CustomObject>
    <description>Persistent store for Application Errors logged using the logging framework.</description>
    <label>Application Error Log</label>
    <nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>