force-app/main/default/objects/ApplicationErrorLog__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Application that logged this error.</description>
    <label>Application Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>