force-app/main/default/objects/ApplicationErrorLog__c/fields/Classname__c.field-meta.xml
<CustomField>
    <fullName>Classname__c</fullName>
    <description>Apex Class, Trigger, or Flow name</description>
    <label>Class Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>