force-app/main/default/objects/ApplicationErrorLog__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Technical Error Message</description>
    <label>Error Message</label>
    <length>128</length>
    <type>Text</type>
</CustomField>