force-app/main/default/objects/ApplicationErrorLog__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <description>Class method name or Flow Element name</description>
    <label>Method Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>