force-app/main/default/objects/ApplicationErrorLog__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>Salesforce RecordId of Record related to this error log.</description>
    <externalId>true</externalId>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>