force-app/main/default/objects/ApplicationErrorLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>Full StackTrace if related to an exception.</description>
    <label>StackTrace</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>