force-app/main/default/objects/ApplicationErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Severity__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>RelatedRecordId__c</columns>
    <columns>Classname__c</columns>
    <columns>LineNumber__c</columns>
    <columns>StackTrace__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>